# Mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: README.md  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: friendservice.cc  friendservice.h  main.cc  userservice.cc  userservice.h
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc  qps_test.cc
lib/include/: lockqueue.h  mprpccontroller.h  mprpcprovider.h  rpcerror.h  rpcheader.pb.h  zookeeperutil.h
src/: CMakeLists.txt  Logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcerror.cc  rpcheader.proto  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpcprovider.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
